# x402-sdk

./: .gitignore  LICENSE  README.md
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  protocol.rs  types.rs  verify.rs
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_usage.py  e2e_example.py
sdk/python/tests/: __init__.py  test_client.py  test_protocol.py  test_signer.py  test_types.py  test_verify.py
sdk/python/x402/: __init__.py  client.py  protocol.py  types.py  verify.py
sdk/python/x402/signer/: __init__.py  aws_kms.py  base.py  local.py
