[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "x402-native"
version = "0.1.0"
description = "Native Rust bindings for x402 Payment Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Girder", email = "hello@girder.dev" }
]
keywords = ["x402", "payments", "crypto", "rust", "native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/girderdev/x402-sdk"
Repository = "https://github.com/girderdev/x402-sdk"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "x402_native"
