[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x402"
version = "0.1.0"
description = "x402 Payment Protocol SDK - Pay for APIs with crypto"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Girder", email = "hello@girder.dev" }
]
keywords = ["x402", "payments", "crypto", "api", "http", "402"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "eth-account>=0.10.0",
    "eth-typing>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
aws = [
    "boto3>=1.28.0",
]

[project.urls]
Homepage = "https://github.com/girderdev/x402-sdk"
Documentation = "https://github.com/girderdev/x402-sdk#readme"
Repository = "https://github.com/girderdev/x402-sdk"
Issues = "https://github.com/girderdev/x402-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["x402"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
